--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
       <div class="mainContainer">
         <nav class="navbar">
           <ul class="no-bullets">
-            <li class="contact"><a href="mailto:at.vajda@gmail.com"><i class="far fa-envelope"></i></a></li>
-            <li class="github"><a href="https://github.com/attilavajdaxyz"><i class="fab fa-github"></i></a></li>
-            <li class="codepen"><a href="https://codepen.io/attila_vajda"><i class="fab fa-codepen"></i></a></li>
-            <li class="linkedin"><a href="https://www.linkedin.com/in/attila-vajda-60a23047/"><i class="fab fa-linkedin-in"></i></a></li>
+            <li class="contact" title="contact"><a href="mailto:at.vajda@gmail.com"><i class="far fa-envelope"></i></a></li>
+            <li class="github" title="github"><a href="https://github.com/attilavajdaxyz"><i class="fab fa-github"></i></a></li>
+            <li class="codepen" title="codepen"><a href="https://codepen.io/attila_vajda"><i class="fab fa-codepen"></i></a></li>
+            <li class="linkedin" title="linkedin"><a href="https://www.linkedin.com/in/attila-vajda-60a23047/"><i class="fab fa-linkedin-in"></i></a></li>
           </ul>
         </nav>
             <div class="mainHeader">
@@ -40,7 +40,7 @@
           
         </ul>
         
-        <p class="lifeText">I have been doing yoga for many years, I draw and paint, photograph and like studying and doing art. I am learning martial arts, I do brazilian jiu jitsu and judo and karate and qi gong. I like reading, playing musical instruments and climbing and listening to mountaineering podcasts.</p>
+        <p class="lifeText">  I have been doing yoga for many years, I draw and paint, photograph and like studying and doing art. I am learning martial arts, I do brazilian jiu jitsu and judo and karate and qi gong. I like reading, playing musical instruments and climbing and listening to mountaineering podcasts.</p>
       </div>
 
     </main>
