--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           
         </ul>
         
-        <p class="lifeText">  I have been doing yoga for many years, I draw and paint, photograph and like studying and doing art. I am learning martial arts, I do brazilian jiu jitsu and judo and karate and qi gong. I like reading, playing musical instruments and climbing and listening to mountaineering podcasts.</p>
+        <p class="lifeText" style="text-indent: 30px; margin: 100px;">I have been doing yoga for many years, I draw and paint, photograph and like studying and doing art. I am learning martial arts, I do brazilian jiu jitsu and judo and karate and qi gong. I like reading, playing musical instruments and climbing and listening to mountaineering podcasts.</p>
       </div>
 
     </main>
