--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <link href="styles.css" rel="stylesheet">
   <script src="https://kit.fontawesome.com/d620d21219.js" crossorigin="anonymous"></script>
+  <title>Attila's Portfolio</title>
 </head>
   
 <body>
