--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </nav>
             <div class="mainHeader">
               <h2 class="mainTitle">Hi, I'm Attila</h2>
-              <p class="subtitle">a designer who codes</p>
+              <p class="subtitle">a junior designer who codes</p>
             </div>
             <div class="mainContent">
             </div>  
@@ -53,12 +53,4 @@
 
 
 
-<!-- thought process: this is a fixed position navbar, flow tao, "let the elements follow the natural flow" 
-  * accessibility question: how to make ⌘+ working I FIGURED IT OUT!!! with flex-direction set to column 🏖 actually position: sticky; will work probably, because it has to do with the normal flow of the document https://devdocs.io/css/position
--->
 
-<!-- title, image text -->
-
-<!-- how to make floating text for the icons? -->
-  
-<!--  make it ugly/bad  -->
