--- a/index.html
+++ b/index.html
@@ -41,11 +41,17 @@
           
         </ul>
         
-        <p class="lifeText">I have been doing yoga for many years, I draw and paint, photograph and like studying and doing art. I am learning martial arts, I do brazilian jiu jitsu and judo and karate and qi gong. I like reading, playing musical instruments and climbing and listening to mountaineering podcasts. 🏔</p>
+        <p class="lifeText">I have been doing yoga for many years, I draw and paint, photograph and like studying and doing art. I am learning martial arts, I do brazilian jiu jitsu and judo and karate and qi gong. I like reading, playing musical instruments and climbing and listening to mountaineering podcasts 🏔.</p>
       </div>
 
     </main>
-
+    <section class="responsiveProjects">
+      <h2>Responsive Web Design Projects</h2>
+    <p class="responsiveDescription"><i>the following projects are from <a href="https://www.freecodecamp.org/">freeCodeCamp</a></i></p>
+    <p class="thoughts">I took these projects as design briefs and further developed them. Please click on the headers to open the webpages. 🫐</p>
+    <a class="linkToTribute" href="https://codepen.io/attila_vajda/pen/MWEREML"><h3 class="tributeHeader">Tribute page</h3></a>
+    <p>This is a tribute to something or someone. What is a tribute? I will look in the dictionary for a description. https://www.thefreedictionary.com/tribute 1. “A gift, payment, declaration, or other acknowledgment of gratitude, respect, or admiration: put up a plaque as a tribute to his generosity.” My ideas to do, a tribute to Masanobu Fukuoka, to Ornette Coleman, Miroco Machiko.</p>
+    </section>
   </body>  
 </html>
   
