--- a/index.html
+++ b/index.html
@@ -25,9 +25,15 @@
             <div class="mainContent">
             </div>  
       </div>
-    </header>
-
+    </header> 
+  
     <main>
+<!--   projects I work on, "very nice I like it"     -->
+       <h2>projects i am working on at the moment,</h2>
+       <a href="https://attilavajdaxyz.github.io/probable-octo-tribble/">
+         <h3>Probable Octo Tribble - blog https://attilavajdaxyz.github.io/probable-octo-tribble/</h3>
+       </a>
+      
          <h2 class="mainTextHeader">my design and code learning so far:</h2>
 
       <div class="mainText">
