--- a/peppermint/peppermint.html
+++ b/peppermint/peppermint.html
@@ -2,6 +2,82 @@
 <html>
    <head>
      <title>peppermintpage🌿</title>
+     <style>
+                 /* 
+          - I am using Adobe color generator to choose colors https://color.adobe.com/de/create/color-wheel 
+          - I will give borders and background colors to everything and perhaps use these features as decorative element, I am hoping to learn more about composition with this
+
+         */
+
+         html {
+           min-width: 300px;
+           font-family: Helvetica, Arial, sans-serif;
+           font-size: 20px;
+         }
+         body {
+           background-color: #067302;
+           border: 10px solid #F2F2F2;
+           max-width: 500px;
+           border-radius: 10px;
+           padding: 20px;
+         }
+         .photo {
+           max-width: 90%;
+           border: 5px solid #055902;
+           border-radius: 10px;
+           margin: 5px;
+         }
+         .drawing {
+           max-width: 90%;
+           border: 5px solid #055902;
+           border-radius: 10px;
+           margin: 5px;
+         }
+         figure {
+           background-color: #fff;
+           border: 5px solid #158C03;
+           border-radius: 10px;
+           text-align: center;
+         }
+         figcaption {
+           text-align: left;
+           border: 5px solid #84D930;
+           border-radius: 5px;
+           margin: 5px;
+           padding: 10px;
+         }
+         h1 {
+           background-color: #fff;
+           color: #734C12; 
+           border: 10px solid #84D930;
+           border-radius: 10px;
+           text-align: center;
+           padding: 15px;
+           font-size: 40px;
+         /*  making ugly websites is fun 🍐  */
+         }
+         p {
+           background-color: #fff;
+           border: 5px solid #F2F2F2;
+           border-radius: 10px;
+           line-height: 1.3;
+           padding: 10px;
+         }
+         /* it's slow, easy craftsmanship */
+         h2 {
+           color: #84D930;
+           background-color: #F2F2F2;
+           border: 10px solid #84D930;
+           border-radius: 30px;
+           text-align: center;
+           padding: 5px;
+           padding-top: 10px;
+         }
+         h2:hover{
+           color: #067302;
+           font-family: Georgia;
+         }
+      </style>
    </head>
    <body>
       <main id="main">
