--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
       <div class="mainText">
         <ul>
-          <li>BA <a href="https://www.arts.ac.uk/subjects/animation-interactive-film-and-sound/undergraduate/ba-hons-interaction-design-arts-lcc#course-summary">Design for Interaction and Moving Image</a> (3 years) at University of the Arts London - London Collage of Communication
+          <li>BA <a href="https://www.arts.ac.uk/subjects/animation-interactive-film-and-sound/undergraduate/ba-hons-interaction-design-arts-lcc#course-summary">Design for Interaction and Moving Image</a> (3 years) at University of the Arts London - London College of Communication
          where I worked on many design briefs and cool projects, attended many workshops (grids, colour theory, contextual and critical thinking, essay writing, darkroom photography, Arduino etc.)</li>
           <li> FdA - Arts, Media, Design (1 year) - London Metropolitan University: one year foundation degree, introduction to many things working on art and design briefs and essays, cool course</li>
           <li> Graphic Design (1 year course) - Kozma Lajos High School</li>
