--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
   
     <main>
 <!--   projects I work on, "very nice I like it"     -->
-       <h2>projects i am working on at the moment,</h2>
+       <h2>these are a few JavaScript algorithms that I solved at freeCodeCamp</h2>
+       <p><a href="https://github.com/attilavajdaxyz/probable-octo-tribble/blob/main/javascript/boo-who.txt">boo-who</a></p>
+      
+       <h2>this is my blog,</h2>
        <a href="https://attilavajdaxyz.github.io/probable-octo-tribble/">
          <h3>Probable Octo Tribble - blog https://attilavajdaxyz.github.io/probable-octo-tribble/</h3>
        </a>
