--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   
     <main>
 <!--   projects I work on, "very nice I like it"     -->
-       <p class="lifeText">I have been doing yoga for many years, I draw and paint, photograph and like studying and doing art. I am learning martial arts, I do brazilian jiu jitsu and judo and karate and qi gong. I like reading, playing musical instruments and climbing and listening to mountaineering podcasts 🏔.</p>
+       <p class="lifeText">I have been doing yoga for many years, I draw and paint, photograph and like studying and doing art. I am learning martial arts, I do brazilian jiu jitsu and judo and karate and qi gong. I like reading, playing musical instruments and climbing and listening to mountaineering podcasts 🏔. I was once sectioned and diagnosed with paranoid schizophrenia and tapered off antipsychotics with the help of a loving neurologist and with lots of help from my family and friends.</p>
       
        <h2>this is a JavaScript algorithm that I solved at freeCodeCamp</h2>
        <p><a href="https://github.com/attilavajdaxyz/probable-octo-tribble/blob/main/javascript/cash-register-1.txt">cash-register</a></p>
