--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
        <p>This is a second page/notebook for my blog:</p>  
        <h2><a href="https://attilavajdaxyz.github.io/ubiquitous-carnival/">ubiquitous carnival</a></h2>
       
-       <p class="lifeText">I have been doing yoga for many years, I draw and paint, photograph and like studying and doing art. I am learning martial arts, I do brazilian jiu jitsu and judo and karate and qi gong. I like reading, playing musical instruments and climbing and listening to mountaineering podcasts 🏔. I was once sectioned and diagnosed with paranoid schizophrenia and tapered off antipsychotics with the help of a loving neurologist and with lots of help from my family and friends.</p>
+       <p class="lifeText">I have been doing yoga for many years, I draw and paint, photograph and like studying and doing art. I am learning martial arts, I do brazilian jiu jitsu and judo and karate and qi gong. I like reading, playing musical instruments and climbing and listening to mountaineering podcasts 🏔.</p>
       
        <h2>this is a JavaScript algorithm that I solved at freeCodeCamp</h2>
        <p><a href="https://github.com/attilavajdaxyz/probable-octo-tribble/blob/main/javascript/cash-register-1.txt">cash-register</a></p>
