added next fuzet

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <main>
        
 <!--   projects I work on, "very nice I like it"     -->
+       <h2><a href="https://attilavajdaxyz.github.io/solid-disco">This is third page of notebook blog for design principles and grid typography hello world</a></h2>
       
        <p>This is a second page/notebook for my blog:</p>  
        <h2><a href="https://attilavajdaxyz.github.io/ubiquitous-carnival/">ubiquitous carnival</a></h2>
