--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 <!--   projects I work on, "very nice I like it"     -->
        <h2><a href="https://attilavajdaxyz.github.io/solid-disco">This is third page of notebook blog for design principles and grid typography hello world</a></h2>
       
+       <h2>check out my  <a href="https://codepen.io/attila_vajda/pen/QWqeYXd?editors=0100">wonderful pebble shop</a></h2>
        <p>This is a second page/notebook for my blog:</p>  
        <h2><a href="https://attilavajdaxyz.github.io/ubiquitous-carnival/">ubiquitous carnival</a></h2>
       
