added projects links

--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
         <p>these links are links to pages of blog pages, i am doing these pages for process, as a technical blog, as a project, sketchbook, notebook, </p>
         <ul class="my-links">
           <li><a href="https://attilavajdaxyz.github.io/solid-disco/">solid-disco</a></li>
+          <li><a href="https://attilavajdaxyz.github.io/ubiquitous-carnival/">ubiquitous-carnival</a></li>
+          <li><a href="https://attilavajdaxyz.github.io/probable-octo-tribble/">probable-octo-tribble</a></li>
+          <li><a href="https://attilavajdaxyz.github.io/legendary-engine/pebbleshop/pebble.html">pebble shop</a></li>
+          <li><a href="https://attilavajdaxyz.github.io/legendary-engine/peppermint/peppermint.html">peppermint page</a></li>
+          <li><a hret="https://github.com/attilavajdaxyz/probable-octo-tribble/blob/main/javascript/cash-register-1.txt">cash register (this is a JavaScript algorithm)</a></li>
+          
         </ul>
       </section>
         
