--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <p class="lifeText">I have been doing yoga for many years, I draw and paint, photograph and like studying and doing art. I am learning martial arts, I do brazilian jiu jitsu and judo and karate and qi gong. I like to read, to play musical instruments and to climb and to listen to mountaineering podcasts 🏔.</p>
 
       <section class="blog-pages">
-        <h2>My Fine Links:</h2>
+        <h2>My Projects:</h2>
         <p>these links are links to pages of blog pages, i am doing these pages for process, as a technical blog, as a project, sketchbook, notebook, </p>
         <ul class="my-links">
           <li><a href="https://attilavajdaxyz.github.io/solid-disco/">solid-disco</a></li>
