--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         <h2>My Projects:</h2>
         <p>these links are links to pages of blog pages, i am doing these pages for process, as a technical blog, as a project, sketchbook, notebook, </p>
         <ul class="my-links">
+          <li><a href="https://attilavajdaxyz.github.io/effective-adventure/">solid-disco</a></li>
           <li><a href="https://attilavajdaxyz.github.io/solid-disco/">solid-disco</a></li>
           <li><a href="https://attilavajdaxyz.github.io/ubiquitous-carnival/">ubiquitous-carnival</a></li>
           <li><a href="https://attilavajdaxyz.github.io/probable-octo-tribble/">probable-octo-tribble</a></li>
