--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
       <section class="blog-pages">
         <h2>My Projects:</h2>
-        <p>these links are links to pages of blog pages, i am doing these pages for process, as a technical blog, as a project, sketchbook, notebook, </p>
+        <p>these are blog pages i am writing as technical blog, sketchbook, notebook: </p>
         <ul class="my-links">
           <li><a href="https://attilavajdaxyz.github.io/effective-adventure/">solid-disco</a></li>
           <li><a href="https://attilavajdaxyz.github.io/solid-disco/">solid-disco</a></li>
