--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         <h2>My Projects:</h2>
         <p>these are blog pages i am writing as technical blog, sketchbook, notebook: </p>
         <ul class="my-links">
+          <li><a href="https://attilavajdaxyz.github.io/sturdy-spoon/">sturdy-spoon</a></li>
           <li><a href="https://attilavajdaxyz.github.io/effective-adventure/">solid-disco</a></li>
           <li><a href="https://attilavajdaxyz.github.io/solid-disco/">solid-disco</a></li>
           <li><a href="https://attilavajdaxyz.github.io/ubiquitous-carnival/">ubiquitous-carnival</a></li>
