--- a/index.html
+++ b/index.html
@@ -2,12 +2,7 @@
 
 <html>
 <head>
-  <link href="styles.css" rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Fredoka&display=swap" rel="stylesheet">  
-
-  <script src="https://kit.fontawesome.com/d620d21219.js" crossorigin="anonymous"></script>
+  <link href="styles.css" rel="stylesheet" type="text/css">
   <title>Attila's Portfolio</title>
 </head>
   
@@ -16,10 +11,10 @@
       <div class="mainContainer">
         <nav class="navbar">
           <ul class="no-bullets">
-            <li class="contact" title="contact"><a href="mailto:at.vajda@gmail.com"><i class="far fa-envelope"></i></a></li>
-            <li class="github" title="github"><a href="https://github.com/attilavajdaxyz"><i class="fab fa-github"></i></a></li>
-            <li class="codepen" title="codepen"><a href="https://codepen.io/attila_vajda"><i class="fab fa-codepen"></i></a></li>
-            <li class="linkedin" title="linkedin"><a href="https://www.linkedin.com/in/attila-vajda-60a23047/"><i class="fab fa-linkedin-in"></i></a></li>
+            <li class="contact" title="contact"><a href="mailto:at.vajda@gmail.com">Email</a></li>
+            <li class="github" title="github"><a href="https://github.com/attilavajdaxyz">GitHub</a></li>
+            <li class="codepen" title="codepen"><a href="https://codepen.io/attila_vajda">CodePen</a></li>
+            <li class="linkedin" title="linkedin"><a href="https://www.linkedin.com/in/attila-vajda-60a23047/">LinkedIn</a></li>
           </ul>
         </nav>
             <div class="mainHeader">
