added freeCodeCamp certificate

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 
-<html>
+<html lang="en">
 <head>
   <link href="styles.css" rel="stylesheet" type="text/css">
   <title>Attila's Portfolio</title>
@@ -35,6 +35,7 @@
         <h2>My Projects:</h2>
         <p>these are blog pages i am writing as technical blog, sketchbook, notebook: </p>
         <ul class="my-links">
+          <li><a href="https://www.freecodecamp.org/certification/fcc69b465b3-0cf3-4a29-bbc3-3f40d9eca7f9/javascript-algorithms-and-data-structures">freeCodeCamp certification with algorithm solutions</a></li>
           <li><a href="https://attilavajdaxyz.github.io/sturdy-spoon/">sturdy-spoon</a></li>
           <li><a href="https://attilavajdaxyz.github.io/effective-adventure/">solid-disco</a></li>
           <li><a href="https://attilavajdaxyz.github.io/solid-disco/">solid-disco</a></li>
