--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
 <head>
-  <link href="styles.css" rel="stylesheet" type="text/css">
+  <link href="styles.css" rel="stylesheet" type="text/css" />
   <title>Attila's Portfolio</title>
 </head>
   
@@ -27,17 +27,15 @@
   
     <main>
        
-<!--   projects I work on, "very nice I like it"     -->
 
       <p class="lifeText">I have been doing yoga for many years, I draw and paint, photograph and like studying and doing art. I am learning martial arts, I do brazilian jiu jitsu and judo and karate and qi gong. I like to read, to play musical instruments and to climb and to listen to mountaineering podcasts 🏔.</p>
 
       <section class="blog-pages">
-        <h2>My Projects:</h2>
-        <p>these are blog pages i am writing as technical blog, sketchbook, notebook: </p>
+        <h2>My projects:</h2>
         <ul class="my-links">
           <li><a href="https://www.freecodecamp.org/certification/fcc69b465b3-0cf3-4a29-bbc3-3f40d9eca7f9/javascript-algorithms-and-data-structures">freeCodeCamp certification with algorithm solutions</a></li>
           <li><a href="https://attilavajdaxyz.github.io/sturdy-spoon/">sturdy-spoon</a></li>
-          <li><a href="https://attilavajdaxyz.github.io/effective-adventure/">solid-disco</a></li>
+          <li><a href="https://attilavajdaxyz.github.io/effective-adventure/">effective-adventure</a></li>
           <li><a href="https://attilavajdaxyz.github.io/solid-disco/">solid-disco</a></li>
           <li><a href="https://attilavajdaxyz.github.io/ubiquitous-carnival/">ubiquitous-carnival</a></li>
           <li><a href="https://attilavajdaxyz.github.io/probable-octo-tribble/">probable-octo-tribble</a></li>
