--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </ul>
       </section>
         
-      <h2 class="mainTextHeader">my design and code learning so far:</h2>
+      <h2 class="mainTextHeader">My design and code learning so far:</h2>
 
       <div class="mainText">
         <ul>
