--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
       <p class="lifeText">I have been doing yoga for many years, I draw and paint, photograph and like studying and doing art. I am learning martial arts, I do brazilian jiu jitsu and judo and karate and qi gong. I like to read, to play musical instruments and to climb and to listen to mountaineering podcasts 🏔.</p>
 
       <section class="blog-pages">
-        <h2>My projects:</h2>
+        <h2>My Fine Links:</h2>
         <ul class="my-links">
+          <li><a href="https://www.codecademy.com/profiles/attilaVajda5318112016">my codecademy profile</a></li>
           <li><a href="https://www.freecodecamp.org/certification/fcc69b465b3-0cf3-4a29-bbc3-3f40d9eca7f9/javascript-algorithms-and-data-structures">freeCodeCamp certification with algorithm solutions</a></li>
           <li><a href="https://attilavajdaxyz.github.io/sturdy-spoon/">sturdy-spoon</a></li>
           <li><a href="https://attilavajdaxyz.github.io/effective-adventure/">effective-adventure</a></li>
