--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
       <section class="blog-pages">
         <h2>My Fine Links:</h2>
         <ul class="my-links">
-          <li><a href="https://github.com/attilavajdaxyz/sturdy-spoon/blob/main/javascript/class_syntax.js">Build a Library project from codecademy</a></li>
+          <li><a href="https://github.com/attilavajdaxyz/sturdy-spoon/blob/main/javascript/school_catalog.js">School Catalog project from codecademy</a></li>
+          <li><a href="https://github.com/attilavajdaxyz/sturdy-spoon/blob/main/javascript/build_a_library.js">Build a Library project from codecademy</a></li>
           <li><a href="https://www.codecademy.com/profiles/attilaVajda5318112016">my codecademy profile</a></li>
           <li><a href="https://www.freecodecamp.org/certification/fcc69b465b3-0cf3-4a29-bbc3-3f40d9eca7f9/javascript-algorithms-and-data-structures">freeCodeCamp certification with algorithm solutions</a></li>
           <li><a href="https://attilavajdaxyz.github.io/sturdy-spoon/">sturdy-spoon</a></li>
