--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <main>
     <h2 class="mainTitle">Hi, I'm Attila Vajda</h2> 
 
-      <p class="info-text">I have been learning to code for a year and a half and I have been enjoying the learning process. I am mainly learning HTML, CSS, JavaScript and Ruby. At the moment I am studying from Eloquent Javascript and MDN guides. I have been doing yoga for many years, I draw and paint, photograph and like studying and doing art. I am learning martial arts, I do brazilian jiu jitsu and judo and karate and qi gong. I like to read, to play musical instruments and to climb and to listen to mountaineering podcasts 🏔</p>
+      <p class="info-text">I have been learning to code for a year and a half and I have been enjoying the learning process. I am mainly learning HTML, CSS, JavaScript and Ruby. At the moment I am studying from Eloquent JavaScript and MDN guides. I have been doing yoga for many years, I draw and paint, photograph and like studying and doing art. I am learning martial arts, I do brazilian jiu jitsu and judo and karate and qi gong. I like to read, to play musical instruments and to climb and to listen to mountaineering podcasts 🏔</p>
 
       <section class="blog-pages">
         <h2>My links:</h2>
