--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <li><a href="https://github.com/attilavajdaxyz/sturdy-spoon/blob/main/javascript/school_catalog.js">School Catalog project from codecademy</a></li>
           <li><a href="https://github.com/attilavajdaxyz/sturdy-spoon/blob/main/javascript/build_a_library.js">Build a Library project from codecademy</a></li> 
           <li><a href="https://attilavajdaxyz.github.io/sturdy-spoon/">this is my technical blog: sturdy-spoon</a></li>
-          <li><a href="file:///Users/attila/Projects/bookish-funicular/index.html">On this page</a> there are some of my drawings and photographs.</li>
+          <li><a href="https://attilavajdaxyz.github.io/bookish-funicular/index.html">On this page</a> there are some of my drawings and photographs.</li>
         </ul>
       </section>
         
