--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
                <li><a href="https://www.freecodecamp.org/certification/fcc69b465b3-0cf3-4a29-bbc3-3f40d9eca7f9/javascript-algorithms-and-data-structures">freeCodeCamp certification with JavaScript algorithm solutions</a></li>
           <li><a href="https://github.com/attilavajdaxyz/sturdy-spoon/blob/main/javascript/school_catalog.js">School Catalog project from codecademy</a></li>
           <li><a href="https://github.com/attilavajdaxyz/sturdy-spoon/blob/main/javascript/build_a_library.js">Build a Library project from codecademy</a></li> 
-          <li><a href="https://attilavajdaxyz.github.io/sturdy-spoon/">this is my technical blog: sturdy-spoon</a></li>
+          <li><a href="https://attilavajdaxyz.github.io/sturdy-spoon/">This is my technical blog: sturdy-spoon</a></li>
           <li><a href="https://attilavajdaxyz.github.io/bookish-funicular/index.html">On this page</a> there are some of my drawings and photographs.</li>
+          <li><a href="https://github.com/attilavajdaxyz/sturdy-spoon">There are simple programs in the folders in this repository</a></li>
         </ul>
       </section>
         
