--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               <li class="linkedin" title="linkedin"><a href="https://www.linkedin.com/in/attila-vajda-60a23047/">LinkedIn</a></li>
             </ul>
           </nav>
-          <form id="contact-form">
+<!--           <form id="contact-form">
               <input type="hidden" name="contact_number">
               <label>Name</label>
               <input type="text" name="user_name">
@@ -57,11 +57,11 @@
               <label>Message</label>
               <textarea name="message"></textarea>
               <input type="submit" value="Send">
-          </form>
+          </form> -->
   </footer>
   
 <!--  email script  -->
-  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+<!--   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
     <script type="text/javascript">
         (function() {
             // https://dashboard.emailjs.com/admin/account
@@ -83,7 +83,7 @@
                     });
             });
         }
-    </script>
+    </script> -->
   </body>  
 </html>
   
